force-app/main/default/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <defaultValue>(&quot;Loan&quot;)</defaultValue>
        <description>Loan or Repay or Interest</description>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installment</fullName>
                    <default>true</default>
                    <label>Installment</label>
                </value>
                <value>
                    <fullName>Repay</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Loan__c</fullName>
        <label>Balance Loan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_percent__c</fullName>
        <defaultValue>0.24</defaultValue>
        <label>Interest percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Start_date__c</fullName>
        <label>Loan Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_given_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoanerID__c</fullName>
        <label>LoanerID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetLoan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NetLoan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repay_Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repay_Date__c</fullName>
        <label>Repay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SecurityContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SecurityContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecurityID__c</fullName>
        <label>SecurityID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <!-- 
                Open - In General
                Due - Need to be paid in next 30 days
                OverDue - Payment Missed
                Upcoming - Due For rest of the payment (for 10 months)
                Paid On Time - Paid on time : Paid before due date
                Paid Late - Paid after due date : Paid on OverDue Status
                -->
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Due</fullName>
                </value>
                <value>
                    <fullName>OverDue</fullName>
                </value>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>Paid On Time</fullName>
                </value>
                <value>
                    <fullName>Paid Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Repay Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action__c</columns>
        <columns>Loan_Account__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Repay_Amount__c</columns>
        <columns>State__c</columns>
        <columns>Loan_Start_date__c</columns>
        <columns>LoanerID__c</columns>
        <columns>SecurityID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repay Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Repay_Exceed_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Repay_Amount__c  &gt;  Balance_Loan__c  || Balance_Loan__c &lt;= 0, true, IF(Repay_Amount__c  &lt;=0,true,false))</errorConditionFormula>
        <errorDisplayField>Repay_Amount__c</errorDisplayField>
        <errorMessage>Repay amount cannot cannot exceed Balance Amount</errorMessage>
    </validationRules>
</CustomObject>