force-app/main/default/objects/Loan__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>EXP</fullName>
            </value>
            <value>
                <fullName>GBE</fullName>
            </value>
            <value>
                <fullName>OE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>TE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>