force-app/main/default/objects/Loan__c/fields/Paid_To__c.field-meta.xml
<CustomField>
<!-- 
    This is a custom field for the Loan object. 
    It is a picklist field that allows the user to select the name of the person who received the payment.
    The picklist values are: NN, NVR, Sangam, Raja, Others.
    The field is not required.

    Furture enhancements:
    1. Need to add this field in Screen Triggered Flows. ( 2 Flows)

-->
    <fullName>Paid_To__c</fullName>
    <label>Paid To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NN</fullName>
                <default>true</default>
                <label>NN</label>
            </value>
            <value>
                <fullName>NVR</fullName>
            </value>
            <value>
                <fullName>Sangam</fullName>
            </value>
            <value>
                <fullName>Raja</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>