force-app/main/default/objects/Loan__c/fields/PyamentDate__c.field-meta.xml
<CustomField>
    <fullName>PyamentDate__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>