force-app/main/default/objects/Loan__c/recordTypes/Expenses.recordType-meta.xml
<RecordType>
    <fullName>Expenses</fullName>
    <active>true</active>
    <description>to maintain Expenses</description>
    <label>Expenses</label>
</RecordType>