force-app/main/default/objects/Loan__c/recordTypes/Loan_Repay.recordType-meta.xml
<RecordType>
    <fullName>Loan_Repay</fullName>
    <active>true</active>
    <description>to maintain repayment or interest records for the Loan</description>
    <label>Loan Repay</label>
</RecordType>