force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Category__c</columns>
    <columns>Loan_Account__c</columns>
    <columns>Repay_Amount__c</columns>
    <columns>State__c</columns>
    <columns>PyamentDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>