force-app/main/default/objects/Loan__c/listViews/Dues.listView-meta.xml
<ListView>
    <fullName>Dues</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Loan_Account__c</columns>
    <columns>Repay_Amount__c</columns>
    <columns>State__c</columns>
    <columns>PyamentDate__c</columns>
    <columns>LoanerID__c</columns>
    <columns>SecurityID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>Due,OverDue</value>
    </filters>
    <label>Due</label>
</ListView>