force-app/main/default/objects/Loan__c/listViews/Expenses.listView-meta.xml
<ListView>
    <fullName>Expenses</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Repay_Amount__c</columns>
    <columns>State__c</columns>
    <columns>PyamentDate__c</columns>
    <columns>Description__c</columns>
    <columns>Paid_To__c</columns>
    <columns>Loan_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Expense</value>
    </filters>
    <label>Expenses</label>
</ListView>