force-app/main/default/objects/Loan__c/listViews/Upcoming_Due.listView-meta.xml
<ListView>
    <fullName>Upcoming_Due</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Loan_Account__c</columns>
    <columns>Repay_Amount__c</columns>
    <columns>State__c</columns>
    <columns>PyamentDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Upcoming</value>
    </filters>
    <label>Upcoming Due</label>
</ListView>